cloudformation/cf-deploy.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: EC2

Parameters:
  DBPassword:
    Description: Database password
    Type: String
    NoEcho: true
    MinLength: 8
  KeyName:
    Description: Key pair
    Type: AWS::EC2::KeyPair::KeyName
  EC2InstanceRole:
    Description: EC2 instance role
    Type: String

Resources:
  rdsDBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: "db.t2.micro"
      AllocatedStorage: 10
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: 0
      Engine: mysql
      EngineVersion: 5.7
      DBInstanceIdentifier: springaws
      DBName: springaws
      MasterUsername: springaws
      MasterUserPassword: !Ref DBPassword
      MultiAZ: false
      PubliclyAccessible: true
      StorageEncrypted: false
      VPCSecurityGroups:
        - !GetAtt rdsSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: mca-cn-practica2
  rdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "SG RDS"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          SourceSecurityGroupName: !Ref ec2SecurityGroup
  ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: spring-8080-8443
      GroupDescription: "SG for SpringBoot"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 5.34.150.32/32
  mcaEC2Instance:
    Type: AWS::EC2::Instance
    DependsOn: rdsDBInstance
    Properties:
      KeyName: !Ref KeyName
      ImageId: ami-0dedf6a6502877301
      InstanceType: "t2.micro"
      IamInstanceProfile: !Ref EC2InstanceRole
      Monitoring: true
      SecurityGroups:
        - !Ref ec2SecurityGroup
      UserData:
        Fn::Base64:
          Fn::Sub:
            - |
              #!/bin/bash -ex
              apt-get update && apt-get install -y default-jre-headless
              wget https://github.com/franco87/mca/releases/download/0.0.1/blog-cqrs-ejem1-1.0.0.jar
              java -jar blog-cqrs-ejem1-1.0.0.jar --cloud.aws.rds.springaws.password=${Pass} --cloud.aws.region.static=${Region}
            - Pass: !Ref DBPassword
              Region: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: mca-cn-practica2

Outputs:
  WebSiteURL:
    Value:
      !Join
        - ''
        - - "http://"
          - !GetAtt mcaEC2Instance.PublicDnsName
          - ":8080/"
    Description: "Computación en la nube: Practica 2"
